Fix comments added overflow

--- a/css/default.css
+++ b/css/default.css
@@ -85,3 +85,8 @@ select {
 .tblGrow {
 	background-color: #e0ffff;
 }
+.cellHeight {
+	width: 400px;
+	height: 100px;
+	overflow: scroll;
+}
